refactor: padroniza codigo utilizando ferramentas de analise